Fix footer spacing

--- a/site/themes/pyconth/assets/css/custom.css
+++ b/site/themes/pyconth/assets/css/custom.css
@@ -1075,7 +1075,7 @@ background: url('/footer-coconut-tree2.png') right bottom no-repeat , radial-gra
 
 
 .about-block {
-  margin-bottom: 2rem;
+  margin-bottom: 3rem;
 }
 
 .about-second-block {
